<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/uploadscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- App Bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="History"
                android:titleTextColor="@android:color/white"
                app:navigationIcon="@drawable/ic_back"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
        </com.google.android.material.appbar.AppBarLayout>
        <!-- Logout Button -->
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_red_dark"
            android:padding="5dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/textViewSchoolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/upload_data_screen"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogout" />

        <!-- Login Person -->
        <TextView
            android:id="@+id/LoginPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSchoolTitle" />

        <!-- Image Slider Section -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/imageSlider"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/LoginPerson" />

        <!-- Add Image Button -->
        <ImageView
            android:id="@+id/addImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="add_image"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSlider" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Remove Image Button -->
        <ImageView
            android:id="@+id/removeImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="remove_image"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSlider" />

        <!-- Description Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/enter_the_detail_description_here"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Latitude TextView -->
        <TextView
            android:id="@+id/textViewLat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="14sp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            android:layout_marginTop="10dp" />

        <!-- Longitude TextView -->
        <TextView
            android:id="@+id/textViewLng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLat"
            android:layout_marginTop="8dp" />

        <!-- Accuracy TextView -->
        <TextView
            android:id="@+id/textViewAccuracy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"
            android:textSize="14sp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLng"
            android:layout_marginTop="8dp" />


        <!-- Select Image Button -->
        <Button
            android:id="@+id/pickimage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/get_location"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonUploadImage"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAccuracy"
            app:layout_constraintWidth_percent="0.45" />

        <!-- Upload Image Button -->
        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/upload_data"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pickimage"
            app:layout_constraintTop_toTopOf="@+id/pickimage"
            app:layout_constraintWidth_percent="0.45" />

        <!-- View History Button -->
        <Button
            android:id="@+id/buttonViewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_history"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonUploadImage"
            android:layout_marginTop="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
